2015-03-11  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/soft-fp.h (_FP_UNREACHABLE): New macro.
	* soft-fp/op-common.h (_FP_MUL): Use _FP_UNREACHABLE instead of
	abort.
	(_FP_FMA): Likewise.
	(_FP_DIV): Likewise.

2015-03-10  Roland McGrath  <roland@hack.frob.com>

	* scripts/evaluate-test.sh: Grok exit code 77 as UNSUPPORTED and exit
	with 0 in that case.
	* Makefile (summarize-tests): New canned sequence, factored out of
	commands for targets tests and xtests.  Display summary lines that
	don't start with PASS: or XFAIL: rather than ones that do start with
	ERROR: or FAIL:.  Make the commands fail if any summary lines fail
	to start with X?PASS: or XFAIL: or UNSUPPORTED: rather than if any
	do start with ERROR: or FAIL:.
	* dlfcn/Makefile (tests): Add bug-atexit3 back here unconditionally
	(except for [$(build-shared) = yes]).
	(tests-unsupported) [$(CXX) empty]: Add bug-atexit3.
	(LDLIBS-bug-atexit3-lib.so): Conditionalize on [$(CXX) nonempty].
	($(objpfx)bug-atexit3, $(objpfx)bug-atexit3.out): Likewise.
	* nptl/Makefile: Revert 2015-03-04 changes.
	[$(CXX) empty] (tests-unsupported): New variable.
	* debug/Makefile: Likewise.

	* posix/regcomp.c: Fix comment typos and formatting to harmonize with
	gnulib file.  Replace __attribute with __attribute__ throughout.

2015-03-10  Carlos O'Donell  <carlos@redhat.com>

	* sysdeps/hppa/fpu/libm-test-ulps: Update.

2015-03-10  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18104]
	* math/auto-libm-test-in: Add another test of pow.
	* math/auto-libm-test-out: Regenerated.

2015-03-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/dbl-64/Makefile (CFLAGS-e_pow.c): Add
	$(config-cflags-nofma).

2015-03-10  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/double.h [SOFT_FP_DOUBLE_H]: New multiple-include guard.
	* soft-fp/extended.h [SOFT_FP_EXTENDED_H]: Likewise.
	* soft-fp/op-1.h [SOFT_FP_OP_1_H]: Likewise.
	* soft-fp/op-2.h [SOFT_FP_OP_2_H]: Likewise.