@@ -1,3 +1,10 @@
+2015-03-11  John David Anglin  <danglin@gcc.gnu.org>
+
+	[BZ #18110]
+	* sysdeps/hppa/fpu/feholdexcpt.c (feholdexcept): Don't modify bufptr in
+	asms.
+	* sysdeps/hppa/fpu/fesetenv.c (fesetenv): Likewise.
+
 2015-03-11  Joseph Myers  <joseph@codesourcery.com>
 
 	* soft-fp/soft-fp.h (_FP_UNREACHABLE): New macro.
